# src/controllers/userController.ts
@@ -1,16 +1,15 @@
 // src/controllers/bookController.ts
 import { Request, Response, NextFunction } from 'express';
 import { registerUser } from '../repositories/userRepository';
-import { Info, Payload } from '../types/customer';
+import { Payload } from '../types/customer';
 import { hashPassword } from '../libraries/bcrypt';
-import {localStrategy} from '../middlewares/passport';
-import jwt from 'jsonwebtoken';
+import userService from '../services/userService';
 
 export async function register(req: Request, res: Response) {
   try {
     const { name, email, password } = req.body ;
 
-    const hashedPassword = await hashPassword(password, 10);
+    const hashedPassword = await hashPassword(password);
     const payload: Payload = {
       name,
       email,
@@ -26,27 +25,17 @@ export async function register(req: Request, res: Response) {
 
 // controllers/authController.ts
 
+export async function getUser(req: Request, res: Response) {
+    try {
+      const id = parseInt(req.params.id || '');
 
-export async function loginUser(req: Request, res: Response, next?: NextFunction) {
-  localStrategy(req, res, (err: Error, user: Express.User, info?: Info) => {
-        if (err || !user) {
-            return res.status(400).json({
-                message: info?.message,
-            });
-        }
-        req.login(user, { session: false }, (err) => {
-            if (err) {
-                res.send(err);
-            }
-            // Generate JWT token
-            const payload = {
-              id: user.id,
-              email: user.email,
-              name : user.name
-            }
-
-            const token = jwt.sign(payload, 'your-secret'); // Replace with your secret key
-            return res.json(token);
-        });
-    })(req, res, next);
-}
+      if (isNaN(id)) {
+        return res.status(400).json({ message: 'Invalid user ID' });
+      }
+      const user = await userService.getUser(id);
+      return res.status(200).json(user);
+    } catch (error) {
+      console.error('Error fetching books:', error);
+      return res.status(500).json({ message: 'Internal server error' });
+    }
+};
